tests/baselines/reference/taggedTemplatesWithTypeArguments1.errors.txt
tests/cases/conformance/es6/templates/taggedTemplatesWithTypeArguments1.ts(11,22): error TS2339: Property 'x' does not exist on type '{}'.
tests/cases/conformance/es6/templates/taggedTemplatesWithTypeArguments1.ts(13,22): error TS2339: Property 'y' does not exist on type '{}'.
tests/cases/conformance/es6/templates/taggedTemplatesWithTypeArguments1.ts(15,22): error TS2339: Property 'z' does not exist on type '{}'.
tests/cases/conformance/es6/templates/taggedTemplatesWithTypeArguments1.ts(24,22): error TS2339: Property 'x' does not exist on type '{}'.
tests/cases/conformance/es6/templates/taggedTemplatesWithTypeArguments1.ts(26,22): error TS2339: Property 'y' does not exist on type '{}'.
tests/cases/conformance/es6/templates/taggedTemplatesWithTypeArguments1.ts(28,22): error TS2339: Property 'z' does not exist on type '{}'.
tests/cases/conformance/es6/templates/taggedTemplatesWithTypeArguments1.ts(38,19): error TS2339: Property 'x' does not exist on type '{}'.
tests/cases/conformance/es6/templates/taggedTemplatesWithTypeArguments1.ts(39,19): error TS2339: Property 'y' does not exist on type '{}'.
tests/cases/conformance/es6/templates/taggedTemplatesWithTypeArguments1.ts(40,19): error TS2339: Property 'z' does not exist on type '{}'.
tests/cases/conformance/es6/templates/taggedTemplatesWithTypeArguments1.ts(43,19): error TS2339: Property 'x' does not exist on type '{}'.
tests/cases/conformance/es6/templates/taggedTemplatesWithTypeArguments1.ts(44,19): error TS2339: Property 'y' does not exist on type '{}'.
tests/cases/conformance/es6/templates/taggedTemplatesWithTypeArguments1.ts(45,19): error TS2339: Property 'z' does not exist on type '{}'.


==== tests/cases/conformance/es6/templates/taggedTemplatesWithTypeArguments1.ts (12 errors) ====
    declare function f<T>(strs: TemplateStringsArray, ...callbacks: Array<(x: T) => any>): void;
    
    interface Stuff {
        x: number;
        y: string;
        z: boolean;
    }
    
    export const a = f<Stuff> `
        hello
        ${stuff => stuff.x}
                         ~
!!! error TS2339: Property 'x' does not exist on type '{}'.
        brave
        ${stuff => stuff.y}
                         ~
!!! error TS2339: Property 'y' does not exist on type '{}'.
        world
        ${stuff => stuff.z}
                         ~
!!! error TS2339: Property 'z' does not exist on type '{}'.
    `;
    
    declare function g<Input, T, U, V>(
        strs: TemplateStringsArray,
        t: (i: Input) => T, u: (i: Input) => U, v: (i: Input) => V): T | U | V;
    
    export const b = g<Stuff, number, string, boolean> `
        hello
        ${stuff => stuff.x}
                         ~
!!! error TS2339: Property 'x' does not exist on type '{}'.
        brave
        ${stuff => stuff.y}
                         ~
!!! error TS2339: Property 'y' does not exist on type '{}'.
        world
        ${stuff => stuff.z}
                         ~
!!! error TS2339: Property 'z' does not exist on type '{}'.
    `;
    
    declare let obj: {
        prop: <T>(strs: TemplateStringsArray, x: (input: T) => T) => {
            returnedObjProp: T
        }
    }
    
    export let c = obj["prop"]<Stuff> `${(input) => ({ ...input })}`
    c.returnedObjProp.x;
                      ~
!!! error TS2339: Property 'x' does not exist on type '{}'.
    c.returnedObjProp.y;
                      ~
!!! error TS2339: Property 'y' does not exist on type '{}'.
    c.returnedObjProp.z;
                      ~
!!! error TS2339: Property 'z' does not exist on type '{}'.
    
    c = obj.prop<Stuff> `${(input) => ({ ...input })}`
    c.returnedObjProp.x;
                      ~
!!! error TS2339: Property 'x' does not exist on type '{}'.
    c.returnedObjProp.y;
                      ~
!!! error TS2339: Property 'y' does not exist on type '{}'.
    c.returnedObjProp.z;
                      ~
!!! error TS2339: Property 'z' does not exist on type '{}'.